--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.5.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
